--- a/top_stories/halfweek/page1.html
+++ b/top_stories/halfweek/page1.html
@@ -296,7 +296,7 @@
                                             href="https://news.ycombinator.com/user?id=ilamont">ilamont</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527886430"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    316 points
+                                    317 points
                                 </span>
                             </td>
                         </tr>
@@ -440,7 +440,7 @@
                                             href="https://news.ycombinator.com/user?id=gok">gok</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527968675"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    277 points
+                                    278 points
                                 </span>
                             </td>
                         </tr>
@@ -548,17 +548,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://laughingsquid.com/romeo-juliet-recited-in-original-shakespeare-accent/">Opening of Romeo and Juliet Recited in the Accent of Shakespeare’s Time [video]</a>
+                                    <a href="http://ciml.info/">A Course in Machine Learning</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17196270">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17214588">
                                         
-                                            107 comments
+                                            26 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=hellofunk">hellofunk</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527774648"
+                                            href="https://news.ycombinator.com/user?id=federicoponzi">federicoponzi</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527947521"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     239 points
                                 </span>
@@ -612,7 +612,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528024203" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528024804" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
