--- a/top_stories/week/index.html
+++ b/top_stories/week/index.html
@@ -548,19 +548,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://blog.cloudflare.com/today-we-mitigated-1-1-1-1/">1.1.1.1 outage explanation</a>
+                                    <a href="https://nancysbraintalks.mit.edu/course/9-11-the-human-brain">MIT 9.11: The Human Brain (Spring 2018)</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17201830">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17216634">
                                         
-                                            80 comments
+                                            26 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=adamch">adamch</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527816061"
+                                            href="https://news.ycombinator.com/user?id=indescions_2018">indescions_2018</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527976883"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    453 points
+                                    456 points
                                 </span>
                             </td>
                         </tr>
@@ -606,7 +606,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528026604" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528027203" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
