--- a/top_stories/week/page1.html
+++ b/top_stories/week/page1.html
@@ -212,19 +212,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://nancysbraintalks.mit.edu/course/9-11-the-human-brain">MIT 9.11: The Human Brain (Spring 2018)</a>
+                                    <a href="https://blog.cloudflare.com/today-we-mitigated-1-1-1-1/">1.1.1.1 outage explanation</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17216634">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17201830">
                                         
-                                            26 comments
+                                            80 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=indescions_2018">indescions_2018</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527976883"
+                                            href="https://news.ycombinator.com/user?id=adamch">adamch</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527816061"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    448 points
+                                    453 points
                                 </span>
                             </td>
                         </tr>
@@ -368,7 +368,7 @@
                                             href="https://news.ycombinator.com/user?id=mariuz">mariuz</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527943469"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    413 points
+                                    414 points
                                 </span>
                             </td>
                         </tr>
@@ -386,7 +386,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17208293">
                                         
-                                            523 comments
+                                            524 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=coloneltcb">coloneltcb</a></strong> &nbsp;•&nbsp;
@@ -612,7 +612,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528026604" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528027203" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
