--- a/top_stories/halfweek/page3.html
+++ b/top_stories/halfweek/page3.html
@@ -248,7 +248,7 @@
                                             href="https://news.ycombinator.com/user?id=smacktoward">smacktoward</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527983596"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    193 points
+                                    198 points
                                 </span>
                             </td>
                         </tr>
@@ -524,17 +524,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://gizmodo.com/google-plans-not-to-renew-its-contract-for-project-mave-1826488620">Google Won't Renew Contract for Project Maven, Pentagon Drone AI Imaging Program</a>
+                                    <a href="https://twitter.com/sandofsky/status/1002637340291018754">Facebook moving away from React Native?</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17208892">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17216628">
                                         
-                                            136 comments
+                                            63 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=mark-ruwt">mark-ruwt</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527880151"
+                                            href="https://news.ycombinator.com/user?id=mpweiher">mpweiher</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527976844"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     145 points
                                 </span>
@@ -548,19 +548,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://phys.org/news/2018-05-aim-stars-rocket.html">A 'self-eating' rocket engine could put satellites in orbit more easily</a>
+                                    <a href="https://gizmodo.com/google-plans-not-to-renew-its-contract-for-project-mave-1826488620">Google Won't Renew Contract for Project Maven, Pentagon Drone AI Imaging Program</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17209456">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17208892">
                                         
-                                            44 comments
+                                            136 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=curtis">curtis</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527882885"
+                                            href="https://news.ycombinator.com/user?id=mark-ruwt">mark-ruwt</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527880151"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    144 points
+                                    145 points
                                 </span>
                             </td>
                         </tr>
@@ -612,7 +612,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528027203" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528027804" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
