--- a/top_stories/daily/page3.html
+++ b/top_stories/daily/page3.html
@@ -212,19 +212,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.bbc.com/news/technology-41015486">How Barcelona shushed noise-makers with sensors</a>
+                                    <a href="https://www.collectorsweekly.com/articles/rube-goldberg-got-tech-right/">Joking Aside, Rube Goldberg Got Tech Right</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17218573">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17217653">
                                         
-                                            20 comments
+                                            4 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=okket">okket</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528015019"
+                                            href="https://news.ycombinator.com/user?id=drjohnson">drjohnson</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527993894"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    30 points
+                                    32 points
                                 </span>
                             </td>
                         </tr>
@@ -248,7 +248,7 @@
                                             href="https://news.ycombinator.com/user?id=okket">okket</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528012895"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    28 points
+                                    29 points
                                 </span>
                             </td>
                         </tr>
@@ -266,7 +266,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17217881">
                                         
-                                            16 comments
+                                            17 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=steven2012">steven2012</a></strong> &nbsp;•&nbsp;
@@ -612,7 +612,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528027203" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528027804" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
