--- a/top_stories/halfweek/page1.html
+++ b/top_stories/halfweek/page1.html
@@ -548,19 +548,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://twitter.com/HeisSpiter/status/1002880397103988737">ReactOS can finally build itself</a>
+                                    <a href="http://ekeler.com/game-boy-camera-canon-ef-mount/">Game Boy Camera Canon EF Lens Mount</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17215409">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17217827">
                                         
-                                            73 comments
+                                            14 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=O_H_E">O_H_E</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527959542"
+                                            href="https://news.ycombinator.com/user?id=rainbowmverse">rainbowmverse</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527998189"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    235 points
+                                    237 points
                                 </span>
                             </td>
                         </tr>
@@ -612,7 +612,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528028405" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528029003" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
