--- a/jobs/page2.html
+++ b/jobs/page2.html
@@ -190,6 +190,30 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
+                                    <a href="https://voiceops.com/careers.html">VoiceOps is hiring across many roles in SF to build AI for b2b voice data</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17170479">
+                                        
+                                            comments
+                                        </a> &nbsp;•&nbsp;
+                                    <strong><a
+                                            href="https://news.ycombinator.com/user?id=dariaevdo">dariaevdo</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527478946"
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
+                                    1 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
                                     <a href="https://www.guilded.gg/jobs">Guilded (YC S17) is hiring senior full-stack engineers</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -274,7 +298,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528030804" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528031405" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
