--- a/top_stories/daily/page2.html
+++ b/top_stories/daily/page2.html
@@ -152,9 +152,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17210812" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17219101" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://www.remotejob.rocks/">Remote Job Rocks – The simplest remote job board on the web</a>
+                                    <a href="https://play.google.com/store/apps/details?id=me.aswinmohan.hacknews">A Hacker News Reader App with Tabs</a>
                                 </span>
                             </td>
                         </tr>
@@ -320,7 +320,7 @@
                                             href="https://news.ycombinator.com/user?id=shawndumas">shawndumas</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528004681"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    46 points
+                                    48 points
                                 </span>
                             </td>
                         </tr>
@@ -338,13 +338,13 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17218573">
                                         
-                                            25 comments
+                                            26 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=okket">okket</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528015019"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    43 points
+                                    44 points
                                 </span>
                             </td>
                         </tr>
@@ -536,7 +536,7 @@
                                             href="https://news.ycombinator.com/user?id=steven2012">steven2012</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527999400"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    26 points
+                                    27 points
                                 </span>
                             </td>
                         </tr>
@@ -560,7 +560,7 @@
                                             href="https://news.ycombinator.com/user?id=bjerun">bjerun</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528009962"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    24 points
+                                    25 points
                                 </span>
                             </td>
                         </tr>
@@ -612,7 +612,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528031405" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528032004" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
