--- a/top_stories/halfweek/page2.html
+++ b/top_stories/halfweek/page2.html
@@ -152,9 +152,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17210812" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17219101" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://www.remotejob.rocks/">Remote Job Rocks – The simplest remote job board on the web</a>
+                                    <a href="https://play.google.com/store/apps/details?id=me.aswinmohan.hacknews">A Hacker News Reader App with Tabs</a>
                                 </span>
                             </td>
                         </tr>
@@ -248,7 +248,7 @@
                                             href="https://news.ycombinator.com/user?id=walterbell">walterbell</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527972769"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    228 points
+                                    229 points
                                 </span>
                             </td>
                         </tr>
@@ -320,7 +320,7 @@
                                             href="https://news.ycombinator.com/user?id=NaOH">NaOH</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527800135"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    223 points
+                                    226 points
                                 </span>
                             </td>
                         </tr>
@@ -506,13 +506,13 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17217081">
                                         
-                                            75 comments
+                                            76 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=smacktoward">smacktoward</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527983596"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    206 points
+                                    207 points
                                 </span>
                             </td>
                         </tr>
@@ -612,7 +612,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528031405" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528032004" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
