--- a/top_stories/halfweek/page3.html
+++ b/top_stories/halfweek/page3.html
@@ -152,9 +152,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17210812" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17219101" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://www.remotejob.rocks/">Remote Job Rocks – The simplest remote job board on the web</a>
+                                    <a href="https://play.google.com/store/apps/details?id=me.aswinmohan.hacknews">A Hacker News Reader App with Tabs</a>
                                 </span>
                             </td>
                         </tr>
@@ -458,13 +458,13 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17218250">
                                         
-                                            123 comments
+                                            126 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=katiey">katiey</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528007929"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    152 points
+                                    155 points
                                 </span>
                             </td>
                         </tr>
@@ -488,7 +488,7 @@
                                             href="https://news.ycombinator.com/user?id=mpweiher">mpweiher</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527976844"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    151 points
+                                    152 points
                                 </span>
                             </td>
                         </tr>
@@ -612,7 +612,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528031405" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528032004" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
