--- a/top_stories/halfweek/page6.html
+++ b/top_stories/halfweek/page6.html
@@ -152,9 +152,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17210812" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17219101" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://www.remotejob.rocks/">Remote Job Rocks – The simplest remote job board on the web</a>
+                                    <a href="https://play.google.com/store/apps/details?id=me.aswinmohan.hacknews">A Hacker News Reader App with Tabs</a>
                                 </span>
                             </td>
                         </tr>
@@ -386,7 +386,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17215391">
                                         
-                                            37 comments
+                                            38 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=maltalex">maltalex</a></strong> &nbsp;•&nbsp;
@@ -489,7 +489,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528031405" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528032004" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
