--- a/top_stories/week/page3.html
+++ b/top_stories/week/page3.html
@@ -152,9 +152,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17210812" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17219101" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://www.remotejob.rocks/">Remote Job Rocks – The simplest remote job board on the web</a>
+                                    <a href="https://play.google.com/store/apps/details?id=me.aswinmohan.hacknews">A Hacker News Reader App with Tabs</a>
                                 </span>
                             </td>
                         </tr>
@@ -392,7 +392,7 @@
                                             href="https://news.ycombinator.com/user?id=farseer">farseer</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527967650"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    279 points
+                                    280 points
                                 </span>
                             </td>
                         </tr>
@@ -416,7 +416,7 @@
                                             href="https://news.ycombinator.com/user?id=gok">gok</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527968675"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    278 points
+                                    279 points
                                 </span>
                             </td>
                         </tr>
@@ -612,7 +612,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528031405" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528032004" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
