--- a/top_stories/daily/page3.html
+++ b/top_stories/daily/page3.html
@@ -212,19 +212,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="http://www.drdobbs.com/architecture-and-design/how-i-came-to-write-d/240165322">How I Came to Write D (2014)</a>
+                                    <a href="http://www.intellectualtakeout.org/article/diversity-staff-university-michigan-nearly-100-full-time-employees">The Diversity Staff at the University of Michigan Is Nearly 100 People</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17219379">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17215601">
                                         
-                                            comments
+                                            6 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=jxub">jxub</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528032048"
+                                            href="https://news.ycombinator.com/user?id=jseliger">jseliger</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527962327"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    17 points
+                                    18 points
                                 </span>
                             </td>
                         </tr>
@@ -344,7 +344,7 @@
                                             href="https://news.ycombinator.com/user?id=prismatic">prismatic</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527969202"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    12 points
+                                    13 points
                                 </span>
                             </td>
                         </tr>
@@ -612,7 +612,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528038605" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528039204" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
