--- a/top_stories/week/page4.html
+++ b/top_stories/week/page4.html
@@ -524,17 +524,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.epi.org/publication/wage-theft-bigger-problem-forms-theft-workers/">Wage Theft is a Bigger Problem Than Other Forms of Theft</a>
+                                    <a href="https://www.gamasutra.com/view/news/318588/The_great_video_game_exodus.php">The great video game exodus</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17216319">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17217081">
                                         
-                                            196 comments
+                                            95 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=walterbell">walterbell</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527972769"
+                                            href="https://news.ycombinator.com/user?id=smacktoward">smacktoward</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527983596"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     231 points
                                 </span>
@@ -548,17 +548,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://lists.gnu.org/archive/html/emacs-devel/2018-05/msg00765.html">Emacs 26.1 released</a>
+                                    <a href="https://www.epi.org/publication/wage-theft-bigger-problem-forms-theft-workers/">Wage Theft is a Bigger Problem Than Other Forms of Theft</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17172524">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17216319">
                                         
-                                            101 comments
+                                            196 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=deng">deng</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527517144"
+                                            href="https://news.ycombinator.com/user?id=walterbell">walterbell</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527972769"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     231 points
                                 </span>
@@ -612,7 +612,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528041004" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528041604" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
