--- a/top_stories/week/page5.html
+++ b/top_stories/week/page5.html
@@ -212,19 +212,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.gamasutra.com/view/news/318588/The_great_video_game_exodus.php">The great video game exodus</a>
+                                    <a href="https://lists.gnu.org/archive/html/emacs-devel/2018-05/msg00765.html">Emacs 26.1 released</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17217081">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17172524">
                                         
-                                            95 comments
+                                            101 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=smacktoward">smacktoward</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527983596"
+                                            href="https://news.ycombinator.com/user?id=deng">deng</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527517144"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    230 points
+                                    231 points
                                 </span>
                             </td>
                         </tr>
@@ -344,7 +344,7 @@
                                             href="https://news.ycombinator.com/user?id=schrodingersbox">schrodingersbox</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527933214"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    222 points
+                                    223 points
                                 </span>
                             </td>
                         </tr>
@@ -482,7 +482,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17214827">
                                         
-                                            97 comments
+                                            98 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=zx2c4">zx2c4</a></strong> &nbsp;•&nbsp;
@@ -612,7 +612,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528041004" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528041604" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
