--- a/top_stories/halfweek/index.html
+++ b/top_stories/halfweek/index.html
@@ -290,7 +290,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17202179">
                                         
-                                            489 comments
+                                            490 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=raleighm">raleighm</a></strong> &nbsp;•&nbsp;
@@ -548,19 +548,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://arxiv.org/abs/1002.2284">Markets are efficient if and only if P = NP (2010)</a>
+                                    <a href="http://ekeler.com/game-boy-camera-canon-ef-mount/">Game Boy Camera Canon EF Lens Mount</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17202950">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17217827">
                                         
-                                            187 comments
+                                            20 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=perculis">perculis</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527833099"
+                                            href="https://news.ycombinator.com/user?id=rainbowmverse">rainbowmverse</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527998189"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    331 points
+                                    334 points
                                 </span>
                             </td>
                         </tr>
@@ -606,7 +606,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528041604" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528042204" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
