--- a/top_stories/halfweek/page3.html
+++ b/top_stories/halfweek/page3.html
@@ -212,17 +212,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://unix.stackexchange.com/questions/1262/where-did-the-wheel-group-get-its-name">Where did the wheel group get its name?</a>
+                                    <a href="https://iotdarwinaward.com/post/improve-your-privacy-in-age-of-mass-surveillance/">Improve Your Privacy in the Age of Mass Surveillance</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17204879">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17213719">
                                         
-                                            46 comments
+                                            59 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=adtac">adtac</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527858254"
+                                            href="https://news.ycombinator.com/user?id=DyslexicAtheist">DyslexicAtheist</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527931667"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     170 points
                                 </span>
@@ -236,19 +236,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.bbc.co.uk/news/stories-44265475">A diary written on castle floorboards</a>
+                                    <a href="https://unix.stackexchange.com/questions/1262/where-did-the-wheel-group-get-its-name">Where did the wheel group get its name?</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17217526">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17204879">
                                         
-                                            18 comments
+                                            46 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=pmoriarty">pmoriarty</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527991447"
+                                            href="https://news.ycombinator.com/user?id=adtac">adtac</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527858254"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    168 points
+                                    170 points
                                 </span>
                             </td>
                         </tr>
@@ -320,7 +320,7 @@
                                             href="https://news.ycombinator.com/user?id=pulks">pulks</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527983439"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    161 points
+                                    163 points
                                 </span>
                             </td>
                         </tr>
@@ -612,7 +612,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528041604" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528042204" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
