--- a/top_stories/halfweek/page5.html
+++ b/top_stories/halfweek/page5.html
@@ -530,7 +530,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17215391">
                                         
-                                            40 comments
+                                            41 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=maltalex">maltalex</a></strong> &nbsp;•&nbsp;
@@ -548,19 +548,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://github.com/uber/horovod">Horovod: Distributed Training Framework for TensorFlow, Keras, and PyTorch</a>
+                                    <a href="https://www.wired.com/story/soghoian-automation/">How Apple Programmer Sal Soghoian Got Apps Talking to Each Other</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17217324">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17218080">
                                         
-                                            9 comments
+                                            22 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=axiomdata316">axiomdata316</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527987787"
+                                            href="https://news.ycombinator.com/user?id=shawndumas">shawndumas</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528004681"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    84 points
+                                    85 points
                                 </span>
                             </td>
                         </tr>
@@ -612,7 +612,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528041604" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528042204" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
