--- a/top_stories/daily/page6.html
+++ b/top_stories/daily/page6.html
@@ -428,17 +428,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://ziglang.org/">The Zig Programming Language</a>
+                                    <a href="http://blog.adnansiddiqi.me/getting-started-with-elasticsearch-in-python/">Getting started with Elasticsearch in Python</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17220294">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17220226">
                                         
                                             comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=signa11">signa11</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528043290"
+                                            href="https://news.ycombinator.com/user?id=happy-go-lucky">happy-go-lucky</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528042619"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     3 points
                                 </span>
@@ -489,7 +489,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528044003" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528044604" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
