--- a/top_stories/halfweek/page6.html
+++ b/top_stories/halfweek/page6.html
@@ -212,19 +212,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="http://www.collaborativefund.com/blog/the-psychology-of-money/">The Psychology of Money</a>
+                                    <a href="https://www.newyorker.com/culture/cultural-comment/the-growing-emptiness-of-the-star-wars-universe">The Growing Emptiness of the “Star Wars” Universe</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17221379">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17204376">
                                         
-                                            14 comments
+                                            95 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=dsr12">dsr12</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528055363"
+                                            href="https://news.ycombinator.com/user?id=bshepard">bshepard</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527853155"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    86 points
+                                    87 points
                                 </span>
                             </td>
                         </tr>
@@ -489,7 +489,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528071604" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528072203" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
