--- a/jobs/page2.html
+++ b/jobs/page2.html
@@ -190,17 +190,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="None">Shoptiques (YC W12) is hiring a team lead for a fast-growing product</a>
+                                    <a href="https://jobs.lever.co/buildzoom/5d98e8d6-b8be-4871-a1de-109af3cb204d">BuildZoom (a better way to remodel) is hiring a Data Engineer</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17174122">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17181472">
                                         
                                             comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=OlgaVidisheva">OlgaVidisheva</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527534082"
+                                            href="https://news.ycombinator.com/user?id=the_economist">the_economist</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527616624"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     1 points
                                 </span>
@@ -214,17 +214,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://voiceops.com/careers.html">VoiceOps is hiring across many roles in SF to build AI for b2b voice data</a>
+                                    <a href="None">Shoptiques (YC W12) is hiring a team lead for a fast-growing product</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17170479">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17174122">
                                         
                                             comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=dariaevdo">dariaevdo</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527478946"
+                                            href="https://news.ycombinator.com/user?id=OlgaVidisheva">OlgaVidisheva</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527534082"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     1 points
                                 </span>
@@ -274,7 +274,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528083603" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528084204" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
