--- a/top_stories/daily/page5.html
+++ b/top_stories/daily/page5.html
@@ -212,19 +212,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.ft.com/content/a374fdac-6589-11e8-90c2-9563a0613e56">Stanford to step-up teaching of ethics in technology</a>
+                                    <a href="https://www.davd.eu/securing-macos/">Securing macOS [in 2018]</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17223383">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17218678">
                                         
-                                            3 comments
+                                            comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=raleighm">raleighm</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528071381"
+                                            href="https://news.ycombinator.com/user?id=bkircher">bkircher</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528017225"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    5 points
+                                    6 points
                                 </span>
                             </td>
                         </tr>
@@ -612,7 +612,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528083603" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528084204" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
