--- a/top_stories/halfweek/page6.html
+++ b/top_stories/halfweek/page6.html
@@ -404,19 +404,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="http://www.trs-80.org/tiny-pascal/">Tiny Pascal (2017)</a>
+                                    <a href="http://johnloeber.com/docs/twitter-likes.html">Adventures in Deleting Tweets</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17220507">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17214711">
                                         
-                                            9 comments
+                                            22 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=ingve">ingve</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528045873"
+                                            href="https://news.ycombinator.com/user?id=loeber">loeber</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527949532"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    77 points
+                                    78 points
                                 </span>
                             </td>
                         </tr>
@@ -428,17 +428,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.reddit.com/r/Entrepreneur/comments/8nittg/im_ray_dalio_ask_me_anything_answering_questions/">Ray Dalio AMA</a>
+                                    <a href="http://www.trs-80.org/tiny-pascal/">Tiny Pascal (2017)</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17206300">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17220507">
                                         
-                                            38 comments
+                                            9 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=mudil">mudil</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527867356"
+                                            href="https://news.ycombinator.com/user?id=ingve">ingve</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528045873"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     77 points
                                 </span>
@@ -489,7 +489,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528086004" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528086604" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
