--- a/top_stories/daily/page5.html
+++ b/top_stories/daily/page5.html
@@ -212,17 +212,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.davd.eu/securing-macos/">Securing macOS [in 2018]</a>
+                                    <a href="https://www.theglobeandmail.com/world/article-in-china-classroom-cameras-scan-student-faces-for-emotion-stoking/">In China, cameras scan student emotions, stoking new fears of state monitoring</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17218678">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17220295">
                                         
-                                            comments
+                                            1 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=bkircher">bkircher</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528017225"
+                                            href="https://news.ycombinator.com/user?id=fmihaila">fmihaila</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528043292"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     6 points
                                 </span>
@@ -236,19 +236,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.axios.com/battery-pioneer-1528047409-d0515380-1881-4e96-891f-3763eaa84666.html">Battery Pioneer Announces New Cell That Doubles Energy Density of Lithium-Ion</a>
+                                    <a href="https://www.davd.eu/securing-macos/">Securing macOS [in 2018]</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17222439">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17218678">
                                         
-                                            2 comments
+                                            comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=mark-ruwt">mark-ruwt</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528062540"
+                                            href="https://news.ycombinator.com/user?id=bkircher">bkircher</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528017225"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    5 points
+                                    6 points
                                 </span>
                             </td>
                         </tr>
@@ -612,7 +612,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528088405" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528089003" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
