--- a/jobs/index.html
+++ b/jobs/index.html
@@ -190,7 +190,7 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://voiceops.com/careers.html">VoiceOps is hiring in SF to build AI for b2b voice data</a>
+                                    <a href="https://voiceops.com/careers.html">VoiceOps is hiring in SF to build AI for B2B voice data</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
@@ -583,7 +583,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528088405" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528089003" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
