--- a/top_stories/halfweek/page4.html
+++ b/top_stories/halfweek/page4.html
@@ -212,19 +212,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://arxiv.org/abs/1801.00631">Deep learning: a critical appraisal</a>
+                                    <a href="https://www.wired.com/story/soghoian-automation/">How Apple Programmer Sal Soghoian Got Apps Talking to Each Other</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17216536">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17218080">
                                         
-                                            58 comments
+                                            53 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=fanf2">fanf2</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527975781"
+                                            href="https://news.ycombinator.com/user?id=shawndumas">shawndumas</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528004681"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    140 points
+                                    141 points
                                 </span>
                             </td>
                         </tr>
@@ -248,7 +248,7 @@
                                             href="https://news.ycombinator.com/user?id=NelsonMinar">NelsonMinar</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528039988"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    137 points
+                                    139 points
                                 </span>
                             </td>
                         </tr>
@@ -320,7 +320,7 @@
                                             href="https://news.ycombinator.com/user?id=signa11">signa11</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528043956"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    127 points
+                                    129 points
                                 </span>
                             </td>
                         </tr>
@@ -344,7 +344,7 @@
                                             href="https://news.ycombinator.com/user?id=DoreenMichele">DoreenMichele</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527970961"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    127 points
+                                    128 points
                                 </span>
                             </td>
                         </tr>
@@ -536,7 +536,7 @@
                                             href="https://news.ycombinator.com/user?id=onychomys">onychomys</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527879545"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    106 points
+                                    107 points
                                 </span>
                             </td>
                         </tr>
@@ -612,7 +612,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528091403" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528092005" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
